# bpaper

./: Cargo.toml
assets/keymaps/: default-linux.json  vim.json
assets/settings/: default.json
breadpaper/specs/: v5-agent-and-onboarding.md
crates/breadpaper/: Cargo.toml
crates/breadpaper/assets/areas/timeline/: doc.md  manifest.toml
crates/breadpaper/assets/areas/timeline/skills/: onboarding.md
crates/breadpaper/src/: agent.rs  agent_panel.rs  areas.rs  breadpaper.rs  timeline_panel.rs  vault.rs
crates/git/src/: repository.rs
crates/worktree/src/: worktree.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
