[package]
name = "breadpaper"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/breadpaper.rs"
doctest = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
editor.workspace = true
fs.workspace = true
fuzzy.workspace = true
git.workspace = true
picker.workspace = true
gpui.workspace = true
log.workspace = true
markdown_preview.workspace = true
menu.workspace = true
multi_buffer.workspace = true
project.workspace = true
serde.workspace = true
shlex.workspace = true
task.workspace = true
terminal.workspace = true
terminal_view.workspace = true
text.workspace = true
toml.workspace = true
ui.workspace = true
util.workspace = true
which.workspace = true
workspace.workspace = true

[dev-dependencies]
tempfile.workspace = true
